--- a/src/main/resources/templates/contents/index.html
+++ b/src/main/resources/templates/contents/index.html
@@ -130,9 +130,9 @@
     <nav class="nav">
         <a class="brand" href="/">Creative Hub</a>
         <a href="/">홈</a>
-        <a href="/auth/register">회원가입</a>
+        <a href="/auth/register.html">회원가입</a>
         <span class="spacer"></span>
-        <a href="/auth/login" class="login-btn">로그인</a>
+        <a href="/auth/login.html" class="login-btn">로그인</a>
     </nav>
 
     <main class="wrapper" role="main">
