--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -130,9 +130,9 @@
     <nav class="nav">
         <a class="brand" href="/">Creative Hub</a>
         <a href="/">홈</a>
-        <a href="/auth/register.html">회원가입</a>
+        <a href="/auth/register.go">회원가입</a>
         <span class="spacer"></span>
-        <a href="/auth/login.html" class="login-btn">로그인</a>
+        <a href="/auth/login.go" class="login-btn">로그인</a>
     </nav>
 
     <main class="wrapper" role="main">
@@ -140,10 +140,7 @@
             <h1>Creative Hub</h1>
             <h2>계산기 서비스</h2>
             <div class="calculator-grid">
-                <a href="/calculator/plus" class="calc-item">덧셈</a>
-                <a href="/calculator/minus" class="calc-item">뺄셈</a>
-                <a href="/calculator/gob" class="calc-item">곱셈</a>
-                <a href="/calculator/nanum" class="calc-item">나눗셈</a>
+                <a href="/calculator/calculator.go" class="calc-item">계산기</a>
             </div>
         </section>
     </main>
